force-app/main/default/objects/Case/fields/LSC_AccountName__c.field-meta.xml
<CustomField>
    <fullName>LSC_AccountName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EFT Account Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>