force-app/main/default/objects/Case/fields/LSC_AccountNo__c.field-meta.xml
<CustomField>
    <fullName>LSC_AccountNo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EFT Account No</label>
    <length>9</length>
    <type>Text</type>
</CustomField>