force-app/main/default/objects/Case/fields/LSC_ApprovalStart__c.field-meta.xml
<CustomField>
    <fullName>LSC_ApprovalStart__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Start</label>
    <type>DateTime</type>
</CustomField>