force-app/main/default/objects/Case/fields/LSC_ApprovalTime__c.field-meta.xml
<CustomField>
    <fullName>LSC_ApprovalTime__c</fullName>
    <label>Approval Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>