force-app/main/default/objects/Case/fields/LSC_ApprovedAmount__c.field-meta.xml
<CustomField>
    <fullName>LSC_ApprovedAmount__c</fullName>
    <label>Approved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>