force-app/main/default/objects/Case/fields/LSC_ApprovedExemptionPercentage__c.field-meta.xml
<CustomField>
    <fullName>LSC_ApprovedExemptionPercentage__c</fullName>
    <formula>(LSC_ApprovedVoluntaryLabourCost__c/LSC_CostOfWorks__c)</formula>
    <label>Approved Exemption Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>