force-app/main/default/objects/Case/fields/LSC_ApprovedVoluntaryLabourCost__c.field-meta.xml
<CustomField>
    <fullName>LSC_ApprovedVoluntaryLabourCost__c</fullName>
    <label>Approved Voluntary Labour Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>