force-app/main/default/objects/Case/fields/LSC_BankCode__c.field-meta.xml
<CustomField>
    <fullName>LSC_BankCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EFT Bank Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>