force-app/main/default/objects/Case/fields/LSC_BranchName__c.field-meta.xml
<CustomField>
    <fullName>LSC_BranchName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EFT Branch Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>