force-app/main/default/objects/Case/fields/LSC_BSB__c.field-meta.xml
<CustomField>
    <fullName>LSC_BSB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EFT BSB</label>
    <length>7</length>
    <type>Text</type>
</CustomField>