force-app/main/default/objects/Case/fields/LSC_CaseComment__c.field-meta.xml
<CustomField>
    <fullName>LSC_CaseComment__c</fullName>
    <description>https://help.salesforce.com/articleView?id=000339344&amp;type=1&amp;mode=1</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>