force-app/main/default/objects/Case/fields/LSC_ConstructionPeriod__c.field-meta.xml
<CustomField>
    <fullName>LSC_ConstructionPeriod__c</fullName>
    <formula>LSC_LevyId__r.LSC_ConstructionPeriod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Construction Period (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>