force-app/main/default/objects/Case/fields/LSC_DataMigrationId__c.field-meta.xml
<CustomField>
    <fullName>LSC_DataMigrationId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Data Migration Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>