force-app/main/default/objects/Case/fields/LSC_Exemption_Amount__c.field-meta.xml
<CustomField>
    <fullName>LSC_Exemption_Amount__c</fullName>
    <formula>CEILING(LSC_ApprovedVoluntaryLabourCost__c *0.0035 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exemption Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>