force-app/main/default/objects/Case/fields/LSC_General_Case_Autoclose__c.field-meta.xml
<CustomField>
    <fullName>LSC_General_Case_Autoclose__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is it under the process of auto closure</description>
    <inlineHelpText>Checked if detected for auto closure</inlineHelpText>
    <label>General_Case_Autoclose</label>
    <type>Checkbox</type>
</CustomField>