force-app/main/default/objects/Case/fields/LSC_InProgressStart__c.field-meta.xml
<CustomField>
    <fullName>LSC_InProgressStart__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>In Progress Start</label>
    <type>DateTime</type>
</CustomField>