force-app/main/default/objects/Case/fields/LSC_InstalmentDetails__c.field-meta.xml
<CustomField>
    <fullName>LSC_InstalmentDetails__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Instalment Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>