force-app/main/default/objects/Case/fields/LSC_IsApproved__c.field-meta.xml
<CustomField>
    <fullName>LSC_IsApproved__c</fullName>
    <formula>ISPICKVAL(Status, &apos;Closed Approved&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Approved</label>
    <type>Checkbox</type>
</CustomField>