force-app/main/default/objects/Case/fields/LSC_Isvalidationbypass_Closecase_OFF__c.field-meta.xml
<CustomField>
    <fullName>LSC_Isvalidationbypass_Closecase_OFF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To by pass the validation rule for the auto closure of the case</description>
    <inlineHelpText>To by pass the validation rule for the auto closure of the case</inlineHelpText>
    <label>Isvalidationbypass_Closecase_OFF</label>
    <type>Checkbox</type>
</CustomField>