force-app/main/default/objects/Case/fields/LSC_LevyId__c.field-meta.xml
<CustomField>
    <fullName>LSC_LevyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Levy</label>
    <referenceTo>LSC_Levy__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>