force-app/main/default/objects/Case/fields/LSC_LevySiteAddress__c.field-meta.xml
<CustomField>
    <fullName>LSC_LevySiteAddress__c</fullName>
    <formula>LSC_LevyId__r.LSC_SiteAddressStreet__c &amp;BR()
&amp;LSC_LevyId__r.LSC_SiteAddressCity__c &amp; &quot;, &quot; &amp; LSC_LevyId__r.LSC_SiteAddressState__c &amp; &apos; &apos; &amp; LSC_LevyId__r.LSC_SiteAddressPostCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Levy Site Address</label>
    <type>Text</type>
</CustomField>