force-app/main/default/objects/Case/fields/LSC_NewCostOfWork__c.field-meta.xml
<CustomField>
    <fullName>LSC_NewCostOfWork__c</fullName>
    <label>New Cost Of Work</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>