force-app/main/default/objects/Case/fields/LSC_OnHoldStart__c.field-meta.xml
<CustomField>
    <fullName>LSC_OnHoldStart__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>On Hold Start</label>
    <type>DateTime</type>
</CustomField>