force-app/main/default/objects/Case/fields/LSC_OnHoldTime__c.field-meta.xml
<CustomField>
    <fullName>LSC_OnHoldTime__c</fullName>
    <defaultValue>0</defaultValue>
    <label>On Hold Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>