force-app/main/default/objects/Case/fields/LSC_ProcessingTime__c.field-meta.xml
<CustomField>
    <fullName>LSC_ProcessingTime__c</fullName>
    <label>Processing Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>