force-app/main/default/objects/Case/fields/LSC_RejectionReasons__c.field-meta.xml
<CustomField>
    <fullName>LSC_RejectionReasons__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rejection/Closed Reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>