force-app/main/default/objects/Case/fields/LSC_ReviewedByTL__c.field-meta.xml
<CustomField>
    <fullName>LSC_ReviewedByTL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed By TL</label>
    <type>Checkbox</type>
</CustomField>