force-app/main/default/objects/Case/fields/LSC_Scheme__c.field-meta.xml
<CustomField>
    <fullName>LSC_Scheme__c</fullName>
    <label>Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LSC_Schemes</valueSetName>
    </valueSet>
</CustomField>