force-app/main/default/objects/Case/fields/LSC_SendEmailOnAddingComment__c.field-meta.xml
<CustomField>
    <fullName>LSC_SendEmailOnAddingComment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email On Adding Comment</label>
    <type>Checkbox</type>
</CustomField>