force-app/main/default/objects/Case/fields/LSC_TimeInQueue__c.field-meta.xml
<CustomField>
    <fullName>LSC_TimeInQueue__c</fullName>
    <label>Time In Queue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>