force-app/main/default/objects/Case/fields/LSC_TotalLifecycle__c.field-meta.xml
<CustomField>
    <fullName>LSC_TotalLifecycle__c</fullName>
    <label>Total Lifecycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>