force-app/main/default/objects/Case/fields/LSC_TransactionId__c.field-meta.xml
<CustomField>
    <fullName>LSC_TransactionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>LSC_Transaction__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>