force-app/main/default/objects/Case/fields/LSC_TransactionLineItemId__c.field-meta.xml
<CustomField>
    <fullName>LSC_TransactionLineItemId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Transaction Line Item</label>
    <referenceTo>LSC_TransactionLineItem__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>