force-app/main/default/objects/Case/fields/LSC_VoluntaryLabourCostofWorks__c.field-meta.xml
<CustomField>
    <fullName>LSC_VoluntaryLabourCostofWorks__c</fullName>
    <formula>LSC_LevyId__r.LSC_VoluntaryLabourCostofWorks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voluntary Labour Cost (incl. GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>