force-app/main/default/objects/Case/fields/LSC_VoluntaryLabourPercentageofWorks__c.field-meta.xml
<CustomField>
    <fullName>LSC_VoluntaryLabourPercentageofWorks__c</fullName>
    <formula>LSC_LevyId__r.LSC_VoluntaryLabourPercentageofWorks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voluntary Labour Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>