force-app/main/default/objects/Case/recordTypes/LSC_Exemption.recordType-meta.xml
<RecordType>
    <fullName>LSC_Exemption</fullName>
    <active>true</active>
    <businessProcess>Exemption</businessProcess>
    <description>Record Type will be used to capture exemption cases</description>
    <label>Exemption</label>
</RecordType>