force-app/main/default/objects/Case/recordTypes/LSC_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>LSC_Inquiry</fullName>
    <active>true</active>
    <businessProcess>Inquiry</businessProcess>
    <description>Record Type will be used to capture inquiry cases</description>
    <label>Inquiry</label>
</RecordType>