force-app/main/default/objects/Case/recordTypes/LSC_Instalment.recordType-meta.xml
<RecordType>
    <fullName>LSC_Instalment</fullName>
    <active>true</active>
    <businessProcess>Instalment</businessProcess>
    <description>Record Type will be used to capture instalment cases</description>
    <label>Instalment</label>
</RecordType>