force-app/main/default/objects/Case/recordTypes/LSC_Refund.recordType-meta.xml
<RecordType>
    <fullName>LSC_Refund</fullName>
    <active>true</active>
    <businessProcess>Refund</businessProcess>
    <description>Record Type will be used to capture refund cases</description>
    <label>Refund</label>
</RecordType>