force-app/main/default/objects/Case/recordTypes/LSC_Registration.recordType-meta.xml
<RecordType>
    <fullName>LSC_Registration</fullName>
    <active>true</active>
    <businessProcess>Registration</businessProcess>
    <description>Registration</description>
    <label>Registration</label>
</RecordType>