force-app/main/default/objects/Case/validationRules/LSC_AmountMoreThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>LSC_AmountMoreThanZero</fullName>
    <active>true</active>
    <errorConditionFormula>LSC_Amount__c &lt; 0</errorConditionFormula>
    <errorMessage>Please enter amount more than 0</errorMessage>
</ValidationRule>