force-app/main/default/objects/Case/validationRules/LSC_Approved_Labour_Cost_Less_Than_50.validationRule-meta.xml
<ValidationRule>
    <fullName>LSC_Approved_Labour_Cost_Less_Than_50</fullName>
    <active>true</active>
    <description>The Approved Voluntary Labour cost needs to be less than or equal to 50% of Cost of Work.</description>
    <errorConditionFormula>AND(
ISCHANGED(Status),
RecordType.DeveloperName = &quot;LSC_Exemption&quot;,
(LSC_ApprovedExemptionPercentage__c &gt; 0.5),
ISPICKVAL(Status, &quot;Pending Approval&quot;)
)</errorConditionFormula>
    <errorMessage>The Approved Voluntary Labour cost needs to be less than or equal to 50% of Cost of Work.</errorMessage>
</ValidationRule>