force-app/main/default/objects/Case/validationRules/LSC_Case_Closed_Rejected_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>LSC_Case_Closed_Rejected_Rule</fullName>
    <active>true</active>
    <description>Validates that the Closed Rejected field has been updated before the status can be updated to Closed Rejected.</description>
    <errorConditionFormula>AND(
ISCHANGED(Status),
ISPICKVAL(Status, &quot;Closed Rejected&quot;),
ISBLANK(LSC_RejectionReasons__c))</errorConditionFormula>
    <errorMessage>Please update the Rejected reasons field before updating the case status to Closed Rejected</errorMessage>
</ValidationRule>