force-app/main/default/objects/Case/validationRules/LSC_Case_Closing_Amount_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>LSC_Case_Closing_Amount_Rule</fullName>
    <active>true</active>
    <description>Validates that Amount field has a value i.e. value entered for the case to be either updated to Closed Approved or Closed Rejected.</description>
    <errorConditionFormula>AND(
ISCHANGED(Status),
RecordType.DeveloperName = &quot;LSC_Refund&quot;,
ISPICKVAL(Status, &quot;Pending Approval&quot;),
ISBLANK(LSC_Amount__c)
)</errorConditionFormula>
    <errorMessage>An Amount is required for the status to be updated</errorMessage>
</ValidationRule>