force-app/main/default/objects/Case/validationRules/LSC_Case_Closing_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>LSC_Case_Closing_Rule</fullName>
    <active>true</active>
    <description>Cases can be approved/Rejected only by approval after submission</description>
    <errorConditionFormula>AND(NOT(LSC_Isvalidationbypass_Closecase_OFF__c),
ISCHANGED(Status),
OR(
RecordType.DeveloperName = &quot;LSC_Exemption&quot;,
RecordType.DeveloperName = &quot;LSC_Instalment&quot;,
RecordType.DeveloperName = &quot;LSC_Refund&quot;),
OR(
ISPICKVAL(PRIORVALUE(Status),&quot;In Progress&quot;),
ISPICKVAL(PRIORVALUE(Status),&quot;New&quot;),
ISPICKVAL(PRIORVALUE(Status),&quot;On Hold&quot;)),
OR (
ISPICKVAL(Status, &quot;Closed Approved&quot;),
ISPICKVAL(Status, &quot;Closed Rejected&quot;))
)</errorConditionFormula>
    <errorMessage>Please submit a case for Approval/Rejection before closing.</errorMessage>
</ValidationRule>