force-app/main/default/objects/Case/validationRules/LSC_Case_Email_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>LSC_Case_Email_Rule</fullName>
    <active>true</active>
    <description>Validates that the Contact Email field has an email address in there before placing the case on hold</description>
    <errorConditionFormula>AND (OR (ISPICKVAL(Status, &quot;On Hold&quot;)),ISBLANK( Contact.Email ))</errorConditionFormula>
    <errorMessage>Please add the contact email address before placing the case on hold</errorMessage>
</ValidationRule>