force-app/main/default/objects/Case/validationRules/LSC_Case_Populate_EFT_No_TLI_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>LSC_Case_Populate_EFT_No_TLI_Rule</fullName>
    <active>true</active>
    <description>Validates that EFT details are populated on a refund case if their is no Transaction Line item linked to the case</description>
    <errorConditionFormula>AND(
ISCHANGED(Status),
RecordType.DeveloperName = &quot;LSC_Refund&quot;,
ISPICKVAL(Status, &quot;Pending Approval&quot;),
ISBLANK(LSC_TransactionLineItemId__c),
OR(
ISBLANK(LSC_AccountName__c),
ISBLANK(LSC_AccountNo__c),
ISBLANK(LSC_BankCode__c),
ISBLANK(LSC_BSB__c))
)</errorConditionFormula>
    <errorMessage>The EFT Account No, Account Name., Bank Code and BSB need to be updated before changing the case status to Pending Approval</errorMessage>
</ValidationRule>