force-app/main/default/objects/Case/validationRules/LSC_Case_Remove_EFT_Details_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>LSC_Case_Remove_EFT_Details_Rule</fullName>
    <active>true</active>
    <description>Validates that EFT details are blank on a refund case if the payment method on related Transaction line item is BPAY, Card, PayID or Paypal</description>
    <errorConditionFormula>AND(
ISCHANGED(Status),
RecordType.DeveloperName = &quot;LSC_Refund&quot;,
ISPICKVAL(Status, &quot;Pending Approval&quot;),
ISPICKVAL( LSC_TransactionLineItemId__r.LSC_Status__c , &quot;Paid&quot;),
OR(
NOT(ISBLANK(LSC_AccountName__c)),
NOT(ISBLANK(LSC_AccountNo__c)),
NOT(ISBLANK(LSC_BankCode__c)),
NOT(ISBLANK(LSC_BSB__c))),
OR(
ISPICKVAL(LSC_TransactionLineItemId__r.LSC_PaymentMethod__c , &quot;BPAY&quot;),
ISPICKVAL(LSC_TransactionLineItemId__r.LSC_PaymentMethod__c , &quot;Card&quot;),
ISPICKVAL(LSC_TransactionLineItemId__r.LSC_PaymentMethod__c , &quot;PayID&quot;),
ISPICKVAL(LSC_TransactionLineItemId__r.LSC_PaymentMethod__c , &quot;PayPal&quot;))
)</errorConditionFormula>
    <errorMessage>The EFT Bank details need to be removed before changing the case status to Pending Approval</errorMessage>
</ValidationRule>