force-app/main/default/objects/Case/validationRules/LSC_NewCostOfWork_Empty_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>LSC_NewCostOfWork_Empty_Rule</fullName>
    <active>true</active>
    <description>New Cost Of Work should be 0 for Exemption Refund Case</description>
    <errorConditionFormula>AND(
ISCHANGED(Status),
ISPICKVAL(Status, &quot;Pending Approval&quot;),
RecordType.DeveloperName = &quot;LSC_Refund&quot;,
OR(
ISPICKVAL(Type , &quot;Requesting a non-profit partial exemption refund&quot;),
ISPICKVAL(Type , &quot;Requesting a owner builder partial exemption refund&quot;)
),
(LSC_NewCostOfWork__c &gt; 0)
)</errorConditionFormula>
    <errorMessage>New Cost Of Work should be 0 for Exemption Refund Case</errorMessage>
</ValidationRule>