force-app/main/default/objects/Case/validationRules/LSC_Refund_Case_BSB_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>LSC_Refund_Case_BSB_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(LSC_BSB__c)), 
NOT(REGEX(LSC_BSB__c, &apos;[0-9]{3}-[0-9]{3}&apos;))
)</errorConditionFormula>
    <errorDisplayField>LSC_BSB__c</errorDisplayField>
    <errorMessage>Please enter BSB in the format XXX-XXX</errorMessage>
</ValidationRule>