force-app/main/default/objects/Case/validationRules/LSC_Refund_ToExclude_WriteoffAmount_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>LSC_Refund_ToExclude_WriteoffAmount_Rule</fullName>
    <active>true</active>
    <description>Validates that Refund Amount doesn&apos;t include Write Off Amount on the levy</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;LSC_Refund&quot;,
LSC_Amount__c  &gt; (LSC_LevyId__r.LSC_TotalPaidCredit__c  -  LSC_LevyId__r.LSC_TotalWriteOffAmount__c)
)</errorConditionFormula>
    <errorMessage>Refund Amount cannot be more than the actual amount paid by the customer (excluding the write off amount)</errorMessage>
</ValidationRule>