force-app/main/default/objects/Case/listViews/Exemption_Case.listView-meta.xml
<ListView>
    <fullName>Exemption_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Exemption</label>
    <queue>Exemption</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>