force-app/main/default/objects/Case/listViews/Exemption_Cases.listView-meta.xml
<ListView>
    <fullName>Exemption_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.STATUS</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Exemption Cases</label>
</ListView>