force-app/main/default/objects/Case/listViews/General_Inquiry_Case.listView-meta.xml
<ListView>
    <fullName>General_Inquiry_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>General Inquiry</label>
    <queue>General_Inquiry</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>