force-app/main/default/objects/Case/listViews/Instalment_Case.listView-meta.xml
<ListView>
    <fullName>Instalment_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Instalment</label>
    <queue>Instalment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>