force-app/main/default/objects/Case/listViews/LSC_ExemptionApproversManager_Case.listView-meta.xml
<ListView>
    <fullName>LSC_ExemptionApproversManager_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>LSC_ApprovedVoluntaryLabourCost__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>LSC_Exemption_Amount__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.LSC_Exemption</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <filters>
        <field>LSC_Exemption_Amount__c</field>
        <operation>greaterThan</operation>
        <value>50000</value>
    </filters>
    <filters>
        <field>LSC_Exemption_Amount__c</field>
        <operation>lessOrEqual</operation>
        <value>100000</value>
    </filters>
    <filters>
        <field>LSC_ReviewedByTL__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Exemption Approvers - Manager</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>